<resources>
    <string name="app_name">LC2</string>
    <string name="result">Result</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="get_love">Get love</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_history">Get history</string>
    <string name="title">Title</string>
    <string name="get_started">Get started</string>

</resources>